new proj/src/objects/GE_HQ_GIB_Mod_Req__c.object
<CustomObject>
    <description>This is a custom object to replace the Asset Standard object because the Asset object would not allow Record Type functions.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GIB Modification Requests (Site Account)</relationshipLabel>
        <relationshipName>Installed_Base_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Assigned_S_N__c</fullName>
        <displayFormat>RID-{00000000}</displayFormat>
        <label>Auto Assigned S/N</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Equipment_Model__c</fullName>
        <label>Equipment Model</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Access_Method__c</fullName>
        <label>Access Method</label>
        <picklist>
            <picklistValues>
                <fullName>Top</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Side</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Installed_Base_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Air_Cloth_Ratio_Gross__c</fullName>
        <label>Air/Cloth Ratio (Gross)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Air_Cloth_Ratio_NET__c</fullName>
        <label>Air/Cloth Ratio (NET)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Air_Volume_ACFM__c</fullName>
        <label>Air Volume (ACFM)</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Air_Volume_DSCFM__c</fullName>
        <label>Air Volume (DSCFM)</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Application__c</fullName>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>AIRSLIDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANODE BAKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASH HANDLING-GENERAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASPHALT-BATCH &amp; DRUM PLANT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASPHALT-BATCH PLANT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASPHALT-BATCH PLT/CONV DRTBURN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASPHALT-BATCH PLT-DIRT BURNER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASPHALT-DRUM PLANT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASPHALT-DRUM PLANT-DIRT BURNER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASPHALT-DRUM PLT/CONV DIRTBURN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASPHALT-GENERAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANBURY MIXER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARGE LOADING/UNLOADING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARK MILLS &amp; DRYING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARTON POT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIN VENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLASTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOILER-BARK BURNER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOILER-CYCLONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOILER-ECONOMIZER-HOT GAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOILER-ECONOMIZER WARM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOILER-FLUIDIZED BED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOILER-FLUIDIZED BED-BUBBLING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOILER-FLUIDIZED BED-PRESSURIZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOILER-FLUIDIZED BED-RECIRCUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOILER-GENERAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOILER-HOG-FUELED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOILER-PULVERIZED COAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOILER-RECOVERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOILER-RECOVERY-DRY BOTTOM</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Area_Parts_Manager__c</fullName>
        <label>Area Parts Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Augm__c</fullName>
        <label>Power Augmentation</label>
        <picklist>
            <picklistValues>
                <fullName>Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nitrogen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nitrogen / Steam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air / Steam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DLE Sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhanced Flow Sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPC/LPC Sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP/LP Steam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPC Sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Steam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LP Steam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Bags_in_Row__c</fullName>
        <label># Bags in Row</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Buying_Behaviour__c</fullName>
        <label>Buying Behaviour</label>
        <picklist>
            <picklistValues>
                <fullName>Low Pentration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meduim Pentration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Pentration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_COD__c</fullName>
        <label>COD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_CSA_Agreement_Status__c</fullName>
        <label>CSA Agreement Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_CSA_Site_Manager__c</fullName>
        <label>CSA-Site Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_CSA_Term_End__c</fullName>
        <label>CS Term End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_CSA_Term_Start__c</fullName>
        <label>CSA Term Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Can_Velocity__c</fullName>
        <label>Can Velocity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Capacity_Factor__c</fullName>
        <label>Capacity Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Cleaning_Actuated_By__c</fullName>
        <label>Cleaning Actuated By ?</label>
        <picklist>
            <picklistValues>
                <fullName>Delta P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuous</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Cleaning_Actuated_by_Delta_P__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cleaning Actuated by Delta P</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Cleaning_Actuated_by_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cleaning Actuated by Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Cleaning_Continuous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cleaning Continuous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Cleaning_Type__c</fullName>
        <label>Cleaning Type</label>
        <picklist>
            <picklistValues>
                <fullName>Plenum Pulse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulse Jet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverse Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverse Air/Shaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverse Air/Sonic Assist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sonic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TVRA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Coalescer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coalescer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Combustion_System__c</fullName>
        <label>Combustion System</label>
        <picklist>
            <picklistValues>
                <fullName>Standard (Non DLN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard - Breech Load Fuel Nozzle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry Low NOX 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Nozzle Quiet Combustor (MNQC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry Low Nox 2.0+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry Low Nox 2.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry Low Nox 2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KONE - Variable Geometry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRY LOW NOX 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRY LOW NOX 1+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lean Head End</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRY LOW NOX 2.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry Low Nox 2.6+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRY LOW EMISSIONS (DLE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-GE Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singular Annular Combustor (SAC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IGCC / Low BTU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Contractual_Parts__c</fullName>
        <label>Contractual Parts</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Contractual_Repairs__c</fullName>
        <label>Contractual Repairs</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Contractual_Services__c</fullName>
        <label>Field Services</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Control_System__c</fullName>
        <label>Control System</label>
        <picklist>
            <picklistValues>
                <fullName>Bendix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conmec/Allen-Bradley PLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contempro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dress-Rand/GE Fanuc PLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Di Tronic IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHC - Mark1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHC - Mark2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHC - Mark3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel Regulator Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiat SEPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawker Sidley-LM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IHI CSI II 7500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IHI CSI III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Links &amp; Levers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHC MDT-20 (Fitchburg)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHC MDT-80 (Fitchburg)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micronet E Simplex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micronet E TMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical Hydraulic Control (MHC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speedtronic Millenium MK-VI/90-70-LM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Woodward Millenium Micronet/90-70-LM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micronet Redundant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micronet Simplex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micronet TMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fitchburg Controls (Mech Drive &amp; Gen)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuovo Pignone Suvimac I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuovo Pignone Suvimac II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuovo Pignone Suvimac II+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuovo Pignone Suvimac IV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Cooling_Method__c</fullName>
        <label>Cooling Method</label>
        <picklist>
            <picklistValues>
                <fullName>Air Cooled - Open Ventilated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drip Proof Blower Ventilated (DPBV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drip Proof Fully-Guarded (DPFG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drip Proof Semi-Guarded (DPSG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydrogen - Conventional Cooled Stator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hermetic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydrogen - Inner Cooled (Westinghouse)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydrogen - Water Cooled Stator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Totally enclosed air-air cooled (TEAAC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Totally Enclosed Fan Ventilated (TEFV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Totally enclosed water-air cooled (TEWAC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydrogen - Oil Cooled Stator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Drip Proof (ODP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Drip Proof Ventilated (ODPV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submerged Motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Totally Enclosed Air Over (TEAO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Totally Enclosed Fan Cooled (TEFC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Totally Enclosed Non-Ventilated (TENV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Cooled - (TEWAC-Totally Enclosed)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WP-I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WP-II</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Customer_Equipment__c</fullName>
        <label>Customer Equipment #</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Customer_Reference__c</fullName>
        <label>Customer Reference</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Cycle_Type__c</fullName>
        <label>Cycle Type</label>
        <picklist>
            <picklistValues>
                <fullName>Simple Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Compression</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Separation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regenerative Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Butadiene (MTBE plants)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condensing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Gas (Ethylene plants)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carbon Dioxide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Cooling Refrigerant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noncondensing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethilene Refrigerant (LNG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fluid Catalytic Cracking (FCC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Gas Feed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel Gas Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combined Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas Boosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas Compression</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas Export/Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas Flash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas Gathering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas Lifting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic Compression</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydrogen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydrocarbons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Methane Refrigerant (LNG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocker Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cogeneration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Delta_P_High__c</fullName>
        <label>Delta P - High</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Delta_P_Low__c</fullName>
        <label>Delta P - Low</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Dew_Point__c</fullName>
        <label>Gas Stream Description</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Diluent__c</fullName>
        <label>Diluent</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selective Water Injection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Downstream_Vane_Separator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Downstream Vane Separator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Drain_Boxes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drain Boxes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Drift_Eliminator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drift Eliminator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Driven_Equipment__c</fullName>
        <label>Driven Equipment</label>
        <picklist>
            <picklistValues>
                <fullName>Aero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compressor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crusher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conveyor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diesel engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas turbine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refiner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steam turbine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Duty_Cycle__c</fullName>
        <label>Duty Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>Class 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baseload-6000 hrs continuous oper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyclic-Daily starts grt thn 2000 hrs/yr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Weekly start less thn 6000 hrs/yr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peaker-daily start less thn 2000 hrs/yr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standby-Less Than 100 hrs/yr</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_END_Date__c</fullName>
        <label>END Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_ES_GEPS_Region__c</fullName>
        <label>IB Region</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia (except China)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Headquarters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA Northern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TURKEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA Western</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe Western</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_EXTENDOR__c</fullName>
        <label>EXTENDOR</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Equip_Code__c</fullName>
        <label>Equip. Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Equip_Model__c</fullName>
        <label>Equip. Model</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Equipment_Status__c</fullName>
        <label>Equipment Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Comissioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>